--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <body>
     <h1>Menace</h1>
     <main>
-        <div class="game">
+        <div class="stats">
+            <table>
+                <tbody>
+                    <tr>
+                        <th>X</th>
+                        <th>O</th>
+                    </tr>
+                    <tr>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="game" tabindex="0">
             <ul class="game__area">
                 <li class="game__cell">
                     <button class="game__control">
